fix: Don't play artist when clicking their tile on mobile

--- a/client/components/App/MediaViewer/MusicLibrary/MediaTile.scss
+++ b/client/components/App/MediaViewer/MusicLibrary/MediaTile.scss
@@ -98,7 +98,13 @@
           display: flex;
         }
       }
+    }
+  }
+}
 
+@media (hover: hover) and (pointer: fine) {
+  #media-viewer {
+    .media-tile {
       &:hover,
       &.active {
         .more {
